--- a/manifest.json
+++ b/manifest.json
@@ -3,9 +3,10 @@
   "short_name": "SmartBag",
   "description": "App per ottimizzare la preparazione della valigia",
   "start_url": "./bag.html",
-  "display": "standalone",
+  "display": "fullscreen",
   "background_color": "#f5f5f5",
   "theme_color": "#4a6fa5",
+  "orientation": "portrait",
   "icons": [
     {
       "src": "icon-192.png",
