--- a/manifest.json
+++ b/manifest.json
@@ -3,7 +3,7 @@
   "short_name": "SmartBag",
   "description": "App per ottimizzare la preparazione della valigia",
   "start_url": "./bag.html",
-  "display": "fullscreen",
+  "display": "standalone",
   "background_color": "#f5f5f5",
   "theme_color": "#4a6fa5",
   "orientation": "portrait",
